Fixing Bug because merge HEAD; Spacing buat 2 space aja; Refining Whatsapp Button; Adding contact info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,8 +137,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   visibility: hidden;
   opacity: 0;
-  left: 15px;
-  bottom: 15px;
+  left: 1rem;
+  bottom: 1rem;
   z-index: 996;
   background: var(--color-utama);
   width: 40px;
@@ -172,25 +172,26 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .wa-send {
   position: fixed;
-  right: 15px;
-  bottom: 15px;
+  right: 1rem;
+  bottom: 1rem;
+  padding:1rem;
   z-index: 996;
   background: #25D366;
   color: #fff;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 100%;
   transition: all 0.4s;
 }
 
 .wa-send i {
-  font-size: 28px;
+  font-size: 2em;
   line-height: 0;
 }
 
 .wa-send:hover {
-  background: #fff;
-  color: #25D366;
+  background: #21bd5c;
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
